--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.9"
@@ -55,7 +56,6 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "jest": "^30.2.0",
-    "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
   },
   "private": true
