--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "test": "jest",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.26",
@@ -23,11 +24,12 @@
     "cors": "^2.8.5",
     "expo": "~54.0.29",
     "expo-constants": "~18.0.12",
+    "expo-device": "~8.0.10",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.10",
-    "expo-notifications": "^0.32.15",
+    "expo-notifications": "~0.32.15",
     "expo-router": "~6.0.20",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "~31.0.12",
