--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~54.0.29",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
@@ -32,6 +33,7 @@
     "expo-notifications": "~0.32.15",
     "expo-router": "~6.0.20",
     "expo-secure-store": "^15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
