feat: update-splash

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,11 @@
     "strict": true,
     "jsx": "react-native",
     "moduleResolution": "bundler"
-  }
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts"
+  ]
 }
