update ios project

--- a/ios/SECOPColombia.xcodeproj/xcshareddata/xcschemes/SECOPColombia.xcscheme
+++ b/ios/SECOPColombia.xcodeproj/xcshareddata/xcschemes/SECOPColombia.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "2620"
+   LastUpgradeVersion = "1130"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "secopcol.app"
-               BlueprintName = "secopcol"
-               ReferencedContainer = "container:secopcol.xcodeproj">
+               BuildableName = "SECOPColombia.app"
+               BlueprintName = "SECOPColombia"
+               ReferencedContainer = "container:SECOPColombia.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "secopcolTests.xctest"
-               BlueprintName = "secopcolTests"
-               ReferencedContainer = "container:secopcol.xcodeproj">
+               BuildableName = "SECOPColombiaTests.xctest"
+               BlueprintName = "SECOPColombiaTests"
+               ReferencedContainer = "container:SECOPColombia.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "secopcol.app"
-            BlueprintName = "secopcol"
-            ReferencedContainer = "container:secopcol.xcodeproj">
+            BuildableName = "SECOPColombia.app"
+            BlueprintName = "SECOPColombia"
+            ReferencedContainer = "container:SECOPColombia.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "secopcol.app"
-            BlueprintName = "secopcol"
-            ReferencedContainer = "container:secopcol.xcodeproj">
+            BuildableName = "SECOPColombia.app"
+            BlueprintName = "SECOPColombia"
+            ReferencedContainer = "container:SECOPColombia.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
