--- a/ios/SECOPColombia/Info.plist
+++ b/ios/SECOPColombia/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>secopcol</string>
+    <string>SECOP Colombia</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -28,7 +28,7 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>secopcol</string>
-          <string>com.anonymous.secopcol</string>
+          <string>com.secopcol.app</string>
         </array>
       </dict>
     </array>
