--- a/ios/SECOPColombia.xcodeproj/xcshareddata/xcschemes/SECOPColombia.xcscheme
+++ b/ios/SECOPColombia.xcodeproj/xcshareddata/xcschemes/SECOPColombia.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "SECOPColombia.app"
+               BuildableName = "Secopcol.app"
                BlueprintName = "SECOPColombia"
                ReferencedContainer = "container:SECOPColombia.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SECOPColombia.app"
+            BuildableName = "Secopcol.app"
             BlueprintName = "SECOPColombia"
             ReferencedContainer = "container:SECOPColombia.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SECOPColombia.app"
+            BuildableName = "Secopcol.app"
             BlueprintName = "SECOPColombia"
             ReferencedContainer = "container:SECOPColombia.xcodeproj">
          </BuildableReference>
