--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
+    "@supabase/supabase-js": "^2.89.0",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "expo": "~54.0.29",
