--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.89.0",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "expo": "~54.0.29",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
