--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "expo": "~54.0.29",
+    "expo-auth-session": "~7.0.10",
     "expo-constants": "~18.0.12",
+    "expo-crypto": "~15.0.8",
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
