--- a/eas.json
+++ b/eas.json
@@ -6,16 +6,47 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": false,
+        "resourceClass": "m-medium"
+      }
+    },
+    "testflight": {
+      "distribution": "store",
+      "ios": {
+        "resourceClass": "m-medium",
+        "buildConfiguration": "Release"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "ios": {
+        "resourceClass": "m-medium",
+        "buildConfiguration": "Release"
+      }
     }
   },
   "submit": {
-    "production": {}
+    "testflight": {
+      "ios": {
+        "appleId": "docco182@icloud.com",
+        "ascAppId": "6757728545",
+        "appleTeamId": "576347NKG2"
+      }
+    },
+    "production": {
+      "ios": {
+        "appleId": "docco182@icloud.com",
+        "ascAppId": "6757728545",
+        "appleTeamId": "576347NKG2"
+      }
+    }
   }
 }
