--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "secopcol",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets//secopcol Exports/secopcol Exports/secopcol-iOS-Default-1024x1024@1x.png",
     "scheme": "secopcol",
     "userInterfaceStyle": "automatic",
     "splash": {
