--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,6 +104,13 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            // TODO: Replace with your own keystore for release builds
+            storeFile file('release.keystore')
+            storePassword 'your_store_password'
+            keyAlias 'your_key_alias'
+            keyPassword 'your_key_password'
+        }
     }
     buildTypes {
         debug {
